--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -519,8 +519,8 @@
   <data name="GetReleaseInfoFailed" xml:space="preserve">
     <value>Failed to fetch the release information!</value>
   </data>
-  <data name="ASFEAsfVersion" xml:space="preserve">
-    <value> - ASF Version: {0}</value>
+  <data name="ErrorLogPluginVersion" xml:space="preserve">
+    <value> - Plugin Version: {0}</value>
   </data>
   <data name="ASFECurrentVersion" xml:space="preserve">
     <value>Current version: </value>
@@ -679,12 +679,15 @@
     <value>AppID | Game Name | Owned | Wishlist | Follow</value>
   </data>
   <data name="ErrorLogASFVersion" xml:space="preserve">
-    <value> - ASF version: {0}</value>
+    <value> - ASF Version: {0}</value>
   </data>
   <data name="ErrorLogErrorName" xml:space="preserve">
-    <value> - Exception type: {0}</value>
+    <value> - Exception Type: {0}</value>
   </data>
   <data name="ErrorLogOriginMessage" xml:space="preserve">
-    <value> - Origin message: {0}</value>
+    <value> - Origin Message: {0}</value>
+  </data>
+  <data name="DevFeatureNotEnabled" xml:space="preserve">
+    <value>ASFEnhance.DevFeature is disabled, this feature is unavilable</value>
   </data>
 </root>
