--- a/ASFEnhance/Localization/Langs.zh-Hans.resx
+++ b/ASFEnhance/Localization/Langs.zh-Hans.resx
@@ -519,8 +519,8 @@
   <data name="GetReleaseInfoFailed" xml:space="preserve">
     <value>读取插件发行版信息失败!</value>
   </data>
-  <data name="ASFEAsfVersion" xml:space="preserve">
-    <value> - ASF版本: {0}</value>
+  <data name="ErrorLogPluginVersion" xml:space="preserve">
+    <value> - 插件版本: {0}</value>
   </data>
   <data name="ASFECurrentVersion" xml:space="preserve">
     <value>当前版本: </value>
@@ -686,5 +686,8 @@
   </data>
   <data name="ErrorLogOriginMessage" xml:space="preserve">
     <value> - 原始消息: {0}</value>
+  </data>
+  <data name="DevFeatureNotEnabled" xml:space="preserve">
+    <value>尚未启用 ASFEnhance.DevFeature , 该命令不可用</value>
   </data>
 </root>
