--- a/ASFEnhance/Localization/Langs.zh-Hans.resx
+++ b/ASFEnhance/Localization/Langs.zh-Hans.resx
@@ -652,7 +652,7 @@
     <value>ASFEnhanceDevFuture配置项已经过时, 请根据文档修改</value>
   </data>
   <data name="ExplorerStart" xml:space="preserve">
-    <value>探索队列任务将在 5 秒后触发</value>
+    <value>探索队列任务将尽快触发</value>
   </data>
   <data name="CheckGameItemError" xml:space="preserve">
     <value>{0} | 参数错误</value>
@@ -704,5 +704,8 @@
   </data>
   <data name="ErrorLogErrorMessage" xml:space="preserve">
     <value> - 错误消息: {0}</value>
+  </data>
+  <data name="SteamSaleEventIsNull" xml:space="preserve">
+    <value>SteamSaleEvent 为 Null, 该 Bot 可能尚未开启 AutoSteamSaleEvent</value>
   </data>
 </root>
