--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -690,8 +690,8 @@
   <data name="DevFeatureNotEnabled" xml:space="preserve">
     <value>ASFEnhance.DevFeature is disabled, this feature is unavilable</value>
   </data>
-  <data name="EulaCmdUnavilable" xml:space="preserve">
-    <value>ASFEnhance.EULA is disabled, this feature is unavilable</value>
+  <data name="EulaFeatureUnavilable" xml:space="preserve">
+    <value>ASFEnhance.EULA not agreed, this feature is unavilable</value>
   </data>
   <data name="ASFEnhanceCurator" xml:space="preserve">
     <value>ASFEnhance's Curator</value>
@@ -700,7 +700,7 @@
     <value>ASFEnhance's Group</value>
   </data>
   <data name="EulaWarning" xml:space="preserve">
-    <value>ASFEnhance.EULA is disabled, some features is disabled</value>
+    <value>ASFEnhance.EULA not agreed, some features is disabled</value>
   </data>
   <data name="ErrorLogErrorMessage" xml:space="preserve">
     <value> - Exception Message: {0}</value>
@@ -827,5 +827,8 @@
   </data>
   <data name="UsageJOINGROUP" xml:space="preserve">
     <value>Let bot to join specified group</value>
+  </data>
+  <data name="EulaCmdUnavilable" xml:space="preserve">
+    <value>ASFEnhance.EULA not agreed, this feature is unavilable</value>
   </data>
 </root>
