--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -696,8 +696,8 @@
   <data name="ASFEnhanceGroup" xml:space="preserve">
     <value>ASFEnhance's Group</value>
   </data>
-  <data name="EulaCmdUnavilable" xml:space="preserve">
-    <value>尚未启用 ASFEnhance.EULA , 该命令不可用</value>
+  <data name="EulaFeatureUnavilable" xml:space="preserve">
+    <value>尚未同意 ASFEnhance.EULA , 无法使用IPC功能</value>
   </data>
   <data name="EulaWarning" xml:space="preserve">
     <value>尚未同意 EULA , 部分命令已禁用</value>
@@ -827,5 +827,8 @@
   </data>
   <data name="UsageCARTRESET" xml:space="preserve">
     <value>清空购物车</value>
+  </data>
+  <data name="EulaCmdUnavilable" xml:space="preserve">
+    <value>尚未同意 ASFEnhance.EULA , 该命令不可用</value>
   </data>
 </root>
