--- a/ASFEnhance/Localization/Langs.zh-Hans.resx
+++ b/ASFEnhance/Localization/Langs.zh-Hans.resx
@@ -858,4 +858,10 @@
   <data name="EnableEmailNotification" xml:space="preserve">
     <value>启用邮件通知</value>
   </data>
+  <data name="UsageEMAILOPTION" xml:space="preserve">
+    <value>读取账户中的电子邮件偏好选项</value>
+  </data>
+  <data name="UsageSETEMAILOPTION" xml:space="preserve">
+    <value>设置账户中的电子邮件偏好选项</value>
+  </data>
 </root>
