--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -870,4 +870,10 @@
   <data name="AcceptFriendRequest" xml:space="preserve">
     <value>{1} 接受来自 {0} 的好友请求</value>
   </data>
+  <data name="UsageCLEARNOTIFICATION" xml:space="preserve">
+    <value>清除新物品和新留言通知</value>
+  </data>
+  <data name="UsageADDBOTFRIEND" xml:space="preserve">
+    <value>让BotA添加BotB为好友</value>
+  </data>
 </root>
