--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -894,4 +894,10 @@
   <data name="ViewPageUrlNotValid" xml:space="preserve">
     <value>Not a valid Url</value>
   </data>
+  <data name="GameAvatarInvalidGameId" xml:space="preserve">
+    <value>Not a valid AppId</value>
+  </data>
+  <data name="GameAvatarInvalidAvatarId" xml:space="preserve">
+    <value>Not a valid AvatarId</value>
+  </data>
 </root>
