Implementation of advanced bot renaming command

--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -900,4 +900,7 @@
   <data name="GameAvatarInvalidAvatarId" xml:space="preserve">
     <value>Not a valid AvatarId</value>
   </data>
+  <data name="RenameTooBigRandomNumber" xml:space="preserve">
+    <value>You can't use a random number with more than 9 digits</value>
+  </data>
 </root>
