--- a/ASFEnhance/Localization/Langs.ru-RU.resx
+++ b/ASFEnhance/Localization/Langs.ru-RU.resx
@@ -900,4 +900,7 @@
   <data name="GameAvatarInvalidAvatarId" xml:space="preserve">
     <value>Некорретный AvatarId</value>
   </data>
+  <data name="RenameTooBigRandomNumber" xml:space="preserve">
+    <value>Вы не можете использовать случайное число с более чем 9 цифрами</value>
+  </data>
 </root>
