--- a/ASFEnhance/Localization/Langs.ru-RU.resx
+++ b/ASFEnhance/Localization/Langs.ru-RU.resx
@@ -903,4 +903,10 @@
   <data name="RenameTooBigRandomNumber" xml:space="preserve">
     <value>Вы не можете использовать случайное число с более чем 9 цифрами</value>
   </data>
+  <data name="GameAvatarGameNotFound" xml:space="preserve">
+    <value>Fetch avilable game list for game avatar failed</value>
+  </data>
+  <data name="GameAvatarGameAvatarIsEmpty" xml:space="preserve">
+    <value>Fetch avilable game avatar failed</value>
+  </data>
 </root>
