--- a/ASFEnhance/Localization/Langs.zh-Hans.resx
+++ b/ASFEnhance/Localization/Langs.zh-Hans.resx
@@ -909,4 +909,22 @@
   <data name="GameAvatarGameNotFound" xml:space="preserve">
     <value>获取游戏列表失败</value>
   </data>
+  <data name="ChangeAvatarFailed" xml:space="preserve">
+    <value>修改头像失败</value>
+  </data>
+  <data name="ChangeAvatarSuccess" xml:space="preserve">
+    <value>修改头像成功</value>
+  </data>
+  <data name="DownloadImageFailed" xml:space="preserve">
+    <value>下载头像图片失败</value>
+  </data>
+  <data name="UsageGAMEAVATAR" xml:space="preserve">
+    <value>根据指定 AppID 和 AvatarID 设置机器人的头像</value>
+  </data>
+  <data name="UsageRANDOMGAMEAVATAR" xml:space="preserve">
+    <value>设置机器人的头像为随机游戏头像</value>
+  </data>
+  <data name="UsageSETAVATAR" xml:space="preserve">
+    <value>设置机器人头像为给定的网络图片</value>
+  </data>
 </root>
