feat 新增文本 & 命令

--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -927,4 +927,10 @@
   <data name="UsageSETAVATAR" xml:space="preserve">
     <value>Set avatar to specified online image</value>
   </data>
+  <data name="UnFollowAllCuratorResult" xml:space="preserve">
+    <value>Successful unfollowed {0} curators, total {1} curators</value>
+  </data>
+  <data name="UsageUNFOLLOWALLCURATORS" xml:space="preserve">
+    <value>Unfollow all curators</value>
+  </data>
 </root>
