--- a/ASFEnhance/Localization/Langs.ru-RU.resx
+++ b/ASFEnhance/Localization/Langs.ru-RU.resx
@@ -939,4 +939,7 @@
   <data name="UsageFAKEPURCHASE" xml:space="preserve">
     <value>Simulate purchase bot's cart, and generate a failed record without actually checking out</value>
   </data>
+  <data name="RedeemWalletError" xml:space="preserve">
+    <value>{0} : {1} Code {2}</value>
+  </data>
 </root>
