feat 增强 `REDEEMWALLET` 命令

--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -942,4 +942,7 @@
   <data name="RedeemWalletError" xml:space="preserve">
     <value>{0} : {1} Code {2}</value>
   </data>
+  <data name="NoAvilableAddressError" xml:space="preserve">
+    <value>Redeem wallet requires addredd information, but not configured, operation canceled</value>
+  </data>
 </root>
