--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -945,4 +945,13 @@
   <data name="NoAvilableAddressError" xml:space="preserve">
     <value>Redeem wallet requires addredd information, but not configured, operation canceled</value>
   </data>
+  <data name="CraftBadgeResult" xml:space="preserve">
+    <value>{0} / {1} badges crafted successful</value>
+  </data>
+  <data name="NoCraftableBadge" xml:space="preserve">
+    <value>No craftable badge</value>
+  </data>
+  <data name="UsageCRAFTBADGE" xml:space="preserve">
+    <value>Automatically craft craftable badges (one level at once) </value>
+  </data>
 </root>
